# take_this_qt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bk  README.md  main.cpp  mainwindow.cpp  mainwindow.h
resources/: resources.qrc
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/CroppingPane/: croppingpane.h  croppingpane.ui
src/FloatImageDialog/: floatimagedialog.cpp  floatimagedialog.h  floatimagedialog.ui
src/Other/: Config.cpp  Config.h
src/TransparentDialog/: transparentdialog.cpp  transparentdialog.h  transparentdialog.ui
src/config/: Config.cpp  Config.h  ConfigView.cpp  ConfigView.h  ConfigView.ui
src/cropping_pane/: croppingpane.cpp  croppingpane.h
src/floatImage_dialog/: FloatImageState.cpp  FloatImageState.h  floatimagedialog.cpp  floatimagedialog.h  floatimagedialog.ui
src/other/: CroppingInfo.cpp  CroppingInfo.h
src/resources/: resources.qrc
src/take_this_qt_lib_autogen/: mocs_compilation.cpp
src/take_this_qt_lib_autogen/3M72XK6UNJ/: moc_transparentdialog.cpp.d
src/take_this_qt_lib_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
src/take_this_qt_lib_autogen/FDKUQDBRIW/: moc_floatimagedialog.cpp.d
src/take_this_qt_lib_autogen/IJHAR2IVER/: moc_Config.cpp.d  moc_ConfigView.cpp.d
src/take_this_qt_lib_autogen/X73UL25YYM/: moc_croppingpane.cpp.d
src/transparent_dialog/: transparentdialog.cpp  transparentdialog.h
test/: CMakeLists.txt  TestBench.cpp  TestBench.h  testMain.cpp
test/config_test/: ConfigTest.cpp  ConfigTest.h
test/floatimage_dialog_test/: FloatImageStateTest.cpp  FloatImageStateTest.h
